# cbm-client-intake

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GCAL-GOOGLE-SETUP.md  GDRIVE-DOCS-SETUP.md  GMAIL-INTEGRATION-GUIDE.md  OPEN-ITEMS.md  README.md  RELEASE_NOTES.md  STAFF-DEPLOYMENT-GUIDE.md  alembic.ini  cconversation-entity.md  cinformation-request-entity.md  cintake-submission-entity.md  cmentorprofile-meeting-fields.md  cmentorprofile-summary-field.md  communications-tab.md  crm-field-handoff.md  csession-ai-summary-field.md  csession-calendar-field.md  csession-transcript-fields.md  docker-compose.yml  documentsfolderurl-crm-field.md  email-executive-summary.md  email-management.md  emailtemplate-et-crm-prereqs.md  field-mapping-completion-plan.md  intake-processing-overview.md  main.py  mentor-administration.md  pyproject.toml  reliability-review-2026-07-17.md  score-volunteer-form-6-mapping.md  submission-admin.md  submission-email-flow.md  worker.py
.do/: app.yaml
alembic/: env.py
app/: __init__.py  espo.py  main.py  orchestrator.py  schemas.py
assignments/: __init__.py  auth.py  espo_user.py  router.py  service.py  stamps.py
comms/: __init__.py  attachments.py  crm.py  quicksend.py  service.py  store.py  summarize.py  sync.py  templates.py  triage.py
core/: __init__.py  action_log.py  app.py  app_config.py  config.py  crm_upsert.py  crypto.py  email_clean.py  enum_filter.py  espo.py  fathom.py  forms.py  gcalendar.py  gdrive.py  gmail.py  gmeet.py  google_directory.py  logging_setup.py  monitoring.py  phone.py  quarantine.py  resumable.py  schema_contract.py  store.py  stream.py  submission_log.py  version.py
directory/: __init__.py  comms_router.py  config.py  router.py  service.py
docs/: __init__.py  grants.py  reconcile.py  service.py  store.py
forms/: __init__.py
frontend/: app.js  index.html  styles.css
mentoradmin/: __init__.py  router.py  service.py
mentorprofile/: __init__.py  router.py  service.py
myemail/: __init__.py  (+2 more)
(+208 files in other folders)
