[project]
name = "cbm-client-intake"
version = "0.45.5"
description = "CBM Client Intake — multi-step wizard frontend + FastAPI proxy that creates Account/Contact/Engagement records in EspoCRM."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.0",
    "itsdangerous>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "google-auth>=2.0",
    "cryptography>=42.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "quotequail>=0.3",
    "mail-parser-reply>=1.4",
    "anthropic>=0.4",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

# This is a deployed application, not a library — uv manages the environment
# and dependencies but does not build/install the project itself.
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
